@@ -252,4 +252,5 @@ $Id$
 * Enhancements to [[Extension:ForeachFunction]]
 * Enhancements to [[Extension:SecureProperties]]
 * Added additional check in SpecialPageManager to bullet proof against more PHP versions
-* 
+* BizzWikiSettings.php: some cleanup and normalization
+*  
